--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ derive_more = "0.99.17"
 dashmap = "5.5"
 tokio = "1.38"
 ctor = "0.2.8"
+better_default = "1.0.5"
 
 # optional dependencies
 openssl = { version = "0.10.64", optional = true }
