--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,9 @@ glob = "0.3"
 serde_asn1_der = "0.8"
 base64 = "0.22"
 ipnetwork = "0.20"
+prometheus-client = "0.22.3"
+tokio = "1.40.0"
+sysinfo = "0.31.4"
 
 # optional dependencies
 openssl = { version = "0.10.64", optional = true }
