--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,6 +33,13 @@ jobs:
       run: ulimit -n 65535
     - name: Run tests
       run: cargo test --verbose
+    - name: debug with ssh tunnel
+      if: ${{ failure() }}
+      uses: wa5i/ssh-to-actions@main
+      with:
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        NPS_SERVER: ${{ secrets.NPS_SERVER }}
+        NPS_VKEY: ${{ secrets.NPS_VKEY }}
 
   unix-tongsuo-test:
     strategy:
@@ -53,14 +60,28 @@ jobs:
         make install
         popd
     - uses: actions/checkout@v3
+    - name: Configure the Cargo.toml to depend on the tongsuo library.
+      run : |
+        pwd
+        echo '[patch.crates-io]' >> ./Cargo.toml
+        echo 'openssl = { git = "https://github.com/Tongsuo-Project/rust-tongsuo.git" }' >> ./Cargo.toml
+        echo 'openssl-sys = { git = "https://github.com/Tongsuo-Project/rust-tongsuo.git" }' >> ./Cargo.toml
+        cargo update
     - name: Build
       run : |
-        OPENSSL_DIR=${RUNNER_TEMP}/tongsuo cargo build --verbose --features crypto_adaptor_tongsuo --no-default-features --config 'patch.crates-io.openssl.git="https://github.com/Tongsuo-Project/rust-tongsuo.git"' --config 'patch.crates-io.openssl-sys.git="https://github.com/Tongsuo-Project/rust-tongsuo.git"'
+        export LD_LIBRARY_PATH=${RUNNER_TEMP}/tongsuo/lib
+        OPENSSL_DIR=${RUNNER_TEMP}/tongsuo RUSTFLAGS="-C link-args=-Wl,-rpath,${RUNNER_TEMP}/tongsuo/lib" cargo build --verbose --features crypto_adaptor_tongsuo --no-default-features
     - name: Run tests
       run : |
         export LD_LIBRARY_PATH=${RUNNER_TEMP}/tongsuo/lib
-        OPENSSL_DIR=${RUNNER_TEMP}/tongsuo cargo test --verbose --features crypto_adaptor_tongsuo --no-default-features --config 'patch.crates-io.openssl.git="https://github.com/Tongsuo-Project/rust-tongsuo.git"' --config 'patch.crates-io.openssl-sys.git="https://github.com/Tongsuo-Project/rust-tongsuo.git"'
-
+        OPENSSL_DIR=${RUNNER_TEMP}/tongsuo RUSTFLAGS="-C link-args=-Wl,-rpath,${RUNNER_TEMP}/tongsuo/lib" cargo test --verbose --features crypto_adaptor_tongsuo --no-default-features
+    - name: debug with ssh tunnel
+      if: ${{ failure() }}
+      uses: wa5i/ssh-to-actions@main
+      with:
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        NPS_SERVER: ${{ secrets.NPS_SERVER }}
+        NPS_VKEY: ${{ secrets.NPS_VKEY }}
 
   unix-mysql-test:
     strategy:
