--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
-          path: build
+          path: docs/build
   
   deploy:
     name: Deploy to AliCloud OSS
@@ -46,7 +46,7 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             name: build-artifacts
-            path: build
+            path: docs/build
         
         - uses: YangHanlin/oss-deployment-action@v1
           with:
