--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,7 @@ base64 = "0.22"
 ipnetwork = "0.20"
 blake2b_simd = "1.0"
 derive_more = "0.99.17"
-dashmap = "5.5"
+dashmap = "6.1"
 tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
 ctor = "0.2.8"
 better_default = "1.0.5"
@@ -72,6 +72,8 @@ sysinfo = "0.31.4"
 prettytable = "0.10"
 rpassword = "7.3"
 async-trait = "0.1"
+stretto = "0.8"
+itertools = "0.14"
 
 # optional dependencies
 openssl = { version = "0.10.64", optional = true }
