--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ regex = "1.11"
 clap = { version = "4.5", features = ["wrap_help", "derive", "env", "suggestions"] }
 sysexits = { version = "0.7", features = ["std"] }
 build-time = "0.1"
-hcl-rs = "0.16"
+hcl-rs = "0.18"
 actix-web = { version = "4.4", features = ["openssl"] }
 actix-tls = "3.1"
 actix-rt = "2.9"
@@ -66,7 +66,7 @@ base64 = "0.22"
 ipnetwork = "0.20"
 blake2b_simd = "1.0"
 derive_more = "0.99.17"
-dashmap = "5.5"
+dashmap = "6.1"
 tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
 ctor = "0.2.8"
 better_default = "1.0.5"
@@ -75,6 +75,8 @@ sysinfo = "0.31.4"
 prettytable = "0.10"
 rpassword = "7.3"
 async-trait = "0.1"
+stretto = "0.8"
+itertools = "0.14"
 
 # optional dependencies
 openssl = { version = "0.10.64", optional = true }
