Optimize auth module timer implementation to reduce resource consumption.
1.Each LeaseEntry used one thread before, consuming too many resources.
  Now using PriorityQueue, only one thread is needed.
2.Optimize auth module data structure and code for clarity and conciseness.
3.Missing test cases, will add them later.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,9 @@ sysinfo = "0.31.4"
 prettytable = "0.10"
 rpassword = "7.3"
 async-trait = "0.1"
+stretto = "0.8"
+itertools = "0.14"
+priority-queue = "2.1"
 
 # optional dependencies
 openssl = { version = "0.10.64", optional = true }
