--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@ rpassword = "7.3"
 async-trait = "0.1"
 stretto = "0.8"
 itertools = "0.14"
+priority-queue = "2.1"
 
 # optional dependencies
 openssl = { version = "0.10.64", optional = true }
