--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,13 +80,13 @@ priority-queue = "2.1"
 crossbeam-channel = "0.5"
 
 # optional dependencies
-openssl = { version = "0.10.64", optional = true }
-openssl-sys = { version = "0.9.102", optional = true }
+openssl = { version = "*", optional = true }
+openssl-sys = { version = "*", optional = true }
 
-# uncomment the following lines to use Tongsuo as underlying crypto adaptor
-#[patch.crates-io]
-#openssl = { git = "https://github.com/Tongsuo-Project/rust-tongsuo.git" }
-#openssl-sys = { git = "https://github.com/Tongsuo-Project/rust-tongsuo.git" }
+# rust-tongsuo is a superset of rust-openssl, so we can use it mandatorily anyway.
+[patch.crates-io]
+openssl = { git = "https://github.com/Tongsuo-Project/rust-tongsuo.git" }
+openssl-sys = { git = "https://github.com/Tongsuo-Project/rust-tongsuo.git" }
 
 [build-dependencies]
 toml = "0.8.19"
