fix: allow some
Signed-off-by: yihong0618 <zouzou0208@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,10 @@ version = "0.3.1"
 [dependencies.libc]
 version = "0.2"
 
+[lints.clippy]
+result_large_err = "allow"
+ptr_arg = "allow"
+
 [[bin]]
 name = "rvault"
 path = "bin/rusty_vault.rs"
