fix: ineffective_open_options clippy
Signed-off-by: yihong0618 <zouzou0208@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,6 +110,16 @@ version = "0.2"
 result_large_err = "allow"
 ptr_arg = "allow"
 let_and_return = "allow"
+if_same_then_else = "allow"
+should_implement_trait = "allow"
+new_without_default = "allow"
+vec_init_then_push = "allow"
+nonminimal_bool = "allow"
+cmp_owned = "allow"
+field_reassign_with_default = "allow"
+await_holding_lock = "allow"
+manual_strip = "allow"
+comparison_chain = "allow"
 
 [[bin]]
 name = "rvault"
