ci: add clippy to ci
Signed-off-by: yihong0618 <zouzou0208@gmail.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,6 +35,8 @@ jobs:
       run: ulimit -n 65535
     - name: Run tests
       run: cargo test --verbose
+    - name: Run Clippy
+      run: cargo clippy -- -D warnings
     - name: debug with ssh tunnel
       if: ${{ failure() }}
       uses: wa5i/ssh-to-actions@main
