fix: update stable
Signed-off-by: yihong0618 <zouzou0208@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,6 +127,8 @@ unnecessary_unwrap = "allow"
 collapsible_match = "allow"
 large_enum_variant = "allow"
 manual_flatten = "allow"
+regex_creation_in_loops = "allow"
+unnecessary_map_or = "allow"
 
 [[bin]]
 name = "rvault"
