feat: make most of clippy happy and add ci to GitHub Actions (#116)
* fix: clippy needless_lifetimes

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: unnecessary_cast for clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: useless_conversion for clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: into_iter_on_ref for clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: allow some

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: clone_on_copy clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: comparison_to_empty clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: len_zero clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: needless_borrow clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: needless_borrows_for_generic_args clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: needless_question_mark clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: nonminimal_bool clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: collapsible_if clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: unwrap_or_default clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: redundant_static_lifetimes clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: match_result_ok clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: question_mark clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: ineffective_open_options clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: new allow

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: redundant_closure clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: collapsible_else_if clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: let_unit_value clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix

* fix: manual_flatten clippy

Signed-off-by: yihong0618 <zouzou0208@gmail.com>

* fix: explicit_auto_der

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,30 @@ version = "0.3.1"
 [dependencies.libc]
 version = "0.2"
 
+[lints.clippy]
+result_large_err = "allow"
+ptr_arg = "allow"
+let_and_return = "allow"
+if_same_then_else = "allow"
+should_implement_trait = "allow"
+new_without_default = "allow"
+vec_init_then_push = "allow"
+nonminimal_bool = "allow"
+cmp_owned = "allow"
+field_reassign_with_default = "allow"
+await_holding_lock = "allow"
+manual_strip = "allow"
+comparison_chain = "allow"
+unnecessary_get_then_check = "allow"
+too_many_arguments = "allow"
+module_inception = "allow"
+unnecessary_unwrap = "allow"
+collapsible_match = "allow"
+large_enum_variant = "allow"
+manual_flatten = "allow"
+regex_creation_in_loops = "allow"
+unnecessary_map_or = "allow"
+
 [[bin]]
 name = "rvault"
 path = "bin/rusty_vault.rs"
