--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,13 +37,15 @@ jobs:
       run: cargo test --verbose
     - name: Run Clippy
       run: cargo clippy -- -D warnings
-    - name: debug with ssh tunnel
-      if: ${{ failure() }}
-      uses: wa5i/ssh-to-actions@main
+    - name: Install tarpaulin
+      run: cargo install cargo-tarpaulin
+	- name: Generate coverage report
+	  run: cargo tarpaulin --out Lcov
+	- name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
       with:
-        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-        NPS_SERVER: ${{ secrets.NPS_SERVER }}
-        NPS_VKEY: ${{ secrets.NPS_VKEY }}
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: wa5i/RustyVault
 
   unix-tongsuo-test:
     strategy:
@@ -72,13 +74,6 @@ jobs:
       run : |
         export LD_LIBRARY_PATH=${RUNNER_TEMP}/tongsuo/lib
         OPENSSL_DIR=${RUNNER_TEMP}/tongsuo RUSTFLAGS="-C link-args=-Wl,-rpath,${RUNNER_TEMP}/tongsuo/lib" cargo test --verbose --features crypto_adaptor_tongsuo --no-default-features
-    - name: debug with ssh tunnel
-      if: ${{ failure() }}
-      uses: wa5i/ssh-to-actions@main
-      with:
-        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-        NPS_SERVER: ${{ secrets.NPS_SERVER }}
-        NPS_VKEY: ${{ secrets.NPS_VKEY }}
 
   unix-mysql-test:
     strategy:
