--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,6 +29,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Run cargo fmt --all -- --check
+      run: cargo fmt --all -- --check
     - name: Build
       run: cargo build --verbose
     - name: ulimit -n
