fix: test case errors in mysql backend.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "rust-analyzer.linkedProjects": [
         "Cargo.toml"
-    ]
+    ],
+    "rust-analyzer.cargo.features": ["storage_mysql"]
 }
