--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -100,6 +100,12 @@ jobs:
         my-cnf: |
           skip-ssl
           port=3306
+    - name: Set macOS Environment Variables
+      if: runner.os == 'macOS'
+      env:
+        MACOSX_DEPLOYMENT_TARGET: "11.0"
+      run: |
+          export MACOSX_DEPLOYMENT_TARGET=11.0
     - name: install diesel_cli
       run: cargo install diesel_cli --no-default-features --features mysql
     - name: init database
@@ -109,7 +115,7 @@ jobs:
     - name: ulimit -n
       run: ulimit -n 65535
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --features storage_mysql --verbose
     - name: Build crate doc
       run: cargo doc --no-deps
 
@@ -177,6 +183,6 @@ jobs:
     - name: Build
       run: cargo build --features storage_mysql --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --features storage_mysql --verbose
     - name: Build crate doc
       run: cargo doc --no-deps
