--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ stretto = "0.8"
 priority-queue = "2.1"
 crossbeam-channel = "0.5"
 maybe-async = { version = "0.2", optional = false }
+lockfile = "0.4.0"
 
 # optional dependencies
 openssl = { version = "*", optional = true }
