--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ priority-queue = "2.1"
 crossbeam-channel = "0.5"
 maybe-async = { version = "0.2", optional = false }
 lockfile = "0.4.0"
+arc-swap = "1"
 
 # optional dependencies
 openssl = { version = "*", optional = true }
