--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ crossbeam-channel = "0.5"
 maybe-async = { version = "0.2", optional = false }
 lockfile = "0.4.0"
 arc-swap = "1"
+blake3 = "1.8"
 
 # optional dependencies
 openssl = { version = "*", optional = true }
