feat: add sqlx-based MySQL storage backend

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
 diesel = { version = "2.1.4", features = ["mysql", "r2d2"], optional = true }
 r2d2 = { version = "0.8.9", optional = true }
 r2d2-diesel = { version = "1.0.0", optional = true }
+sqlx = { version = "0.8", optional = true, default-features = true, features = ["macros", "mysql", "postgres", "sqlite", "any", "runtime-tokio", "chrono", "uuid", "json", "bigdecimal"] }
 bcrypt = "0.15"
 url = "2.5"
 ureq = { version = "2.10", features = ["json"] }
@@ -95,7 +96,8 @@ openssl-sys = { git = "https://github.com/Tongsuo-Project/rust-tongsuo.git" }
 toml = "0.8.19"
 
 [features]
-default = ["crypto_adaptor_openssl"]
+default = ["crypto_adaptor_openssl", "storage_sqlx"]
+storage_sqlx = ["sqlx"]
 storage_mysql = ["diesel", "r2d2", "r2d2-diesel"]
 crypto_adaptor_openssl = ["dep:openssl", "dep:openssl-sys"]
 crypto_adaptor_tongsuo = ["dep:openssl", "dep:openssl-sys"]
